@@ -1,8 +1,8 @@
-/*
-    Copyright 2008-2016, Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 2008-2018, Felspar Co Ltd. <http://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -128,7 +128,7 @@ namespace fostlib {
             }
 
             /// The response body and headers
-            boost::shared_ptr< const binary_body > body();
+            boost::shared_ptr<binary_body> body();
 
         private:
             std::unique_ptr<network_connection> m_cnx;
