@@ -1,3 +1,6 @@
+2018-07-02  Kirit Saelensminde  <kirit@felspar.com>
+ The HTTP response body doesn't really need to be `const`.
+
 2018-06-11  Kirit Saelensminde  <kirit@felspar.com>
  Add `fost-hod` for handling packet oriented data over TCP.
 
